--- a/about.html
+++ b/about.html
@@ -68,12 +68,12 @@
                         <img class="dark" aria-hidden="true" decoding="async" src="beatslogo.jpg" alt="compnay logo" height="80">
                     </a>
                     <ul id="on-top" class="navbar-links">
-                        <li class="nav-li"><a class="link" href="/index.html" style="font-family: 'Dancing Script', cursive;">Home</a></li>
-                        <li class="nav-li"><a id="active-menu" class="link" href="/about.html" style="font-family: 'Dancing Script', cursive;">About</a></li>
+                        <li class="nav-li"><a class="link" href="/beautybeats/index.html" style="font-family: 'Dancing Script', cursive;">Home</a></li>
+                        <li class="nav-li"><a id="active-menu" class="link" href="/beautybeats/about.html" style="font-family: 'Dancing Script', cursive;">About</a></li>
                         <li class="nav-li"><a class="link" href="index.html#services" style="font-family: 'Dancing Script', cursive;">Services</a></li>
-                        <!-- <li class="nav-li"><a class="link" href="html/portfolio.html">Portfolio</a></li> -->
-                        <li class="nav-li"><a class="link" href="/testimonials.html" style="font-family: 'Dancing Script', cursive;">Testimonials</a></li>
-                        <li class="nav-li"><a class="link" href="/contact.html" style="font-family: 'Dancing Script', cursive;">Contact</a></li>
+                        <!-- <li class="nav-li"><a class="link" href="/beautybeats/html/portfolio.html">Portfolio</a></li> -->
+                        <li class="nav-li"><a class="link" href="/beautybeats/testimonials.html" style="font-family: 'Dancing Script', cursive;">Testimonials</a></li>
+                        <li class="nav-li"><a class="link" href="/beautybeats/contact.html" style="font-family: 'Dancing Script', cursive;">Contact</a></li>
                     </ul>
                 </div>
                 <button class="dark-mode-button top-dark-mode-button" aria-label="dark mode toggle">
@@ -168,7 +168,7 @@
     <footer id="footer">
         <div class="container">
             <div class="left-section">
-                <a class="logo" href="/index.html"><img loading="lazy" decoding="async" src="beatslogo.jpg" alt="logo" width="293" height="91"></a>
+                <a class="logo" href="/beautybeats/index.html"><img loading="lazy" decoding="async" src="beatslogo.jpg" alt="logo" width="293" height="91"></a>
                 <p style="font-family: 'Dancing Script', cursive;">
                     At beatsbybelvina_, our mission is to empower our clients through stunning, transformative beauty experiences. Dedicated to artistry and innovation, we specialize in bold and beautiful makeup applications that not only enhance but celebrate individuality. Our commitment to excellence ensures every client leaves feeling confident, radiant, and uniquely glamorous.
                 </p>
@@ -189,7 +189,7 @@
                         <li><h2 style="font-family: 'Dancing Script', cursive;">Get in Touch</h2></li>
                         <li><img loading="lazy" decoding="async" src="pin.svg" alt="" width="24" height="24"><a href="" target="_blank" style="font-family: 'Dancing Script', cursive;">Gaithersberg,MD</a></li>
                         <li><img loading="lazy" decoding="async" src="footer-phone.svg" alt="" width="24" height="24"><a href="tel:555-213-9120" style="font-family: 'Dancing Script', cursive;">000-000-000</a></li>
-                        <li><img loading="lazy" decoding="async" src="email.svg" alt="" width="24" height="24"><a href="mailto:info@email.com"style="font-family: 'Dancing Script', cursive;">belvina736@gmail.com</a></li>
+                        <li><img loading="lazy" decoding="async" src="email.svg" alt="" width="24" height="24"><a href="mailto:belvina736@gmail.com"style="font-family: 'Dancing Script', cursive;">belvina736@gmail.com</a></li>
                     </ul>
                 </div>
     
