--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
         <nav>
             <div class="navbar-menu">
                 <div id="side-menu" class=" side-nav">
-                    <a class="nav-logo" href="/index.html">
+                    <a class="nav-logo" href="/beautybeats/index.html">
                         <img class="light" aria-hidden="true" decoding="async" src="beatslogo.jpg" alt="compnay logo" height="80">
                         <img class="dark" aria-hidden="true" decoding="async" src="beatslogo.jpg" alt="compnay logo" height="80">
                     </a>
