--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
                         <li class="nav-li"><a class="link" href="/beautybeats/about.html" style="font-family: 'Dancing Script', cursive;">About</a></li>
                         <li class="nav-li"><a class="link" href="/beautybeats/index.html#services" style="font-family: 'Dancing Script', cursive;">Services</a></li>
                         <!-- <li class="nav-li"><a class="link" href="/beautybeats/html/portfolio.html">Portfolio</a></li> -->
-                        <li class="nav-li"><a class="link" href="/testimonials.html" style="font-family: 'Dancing Script', cursive;">Testimonials</a></li>
+                        <li class="nav-li"><a class="link" href="/beautybeats/testimonials.html" style="font-family: 'Dancing Script', cursive;">Testimonials</a></li>
                         <li class="nav-li"><a id="active-menu" class="link" href="/beautybeats/contact.html" style="font-family: 'Dancing Script', cursive;">Contact</a></li>
                     </ul>
                 </div>
