--- a/index.html
+++ b/index.html
@@ -63,17 +63,17 @@
         <nav>
             <div class="navbar-menu">
                 <div id="side-menu" class=" side-nav">
-                    <a class="nav-logo" href="/index.html">
+                    <a class="nav-logo" href="/beautybeats/index.html">
                         <img class="light" aria-hidden="true" decoding="async" src="beatslogo.jpg" alt="compnay logo" height="80">
                         <img class="dark" aria-hidden="true" decoding="async" src="beatslogo.jpg" alt="compnay logo" height="80">
                     </a>
                     <ul id="on-top" class="navbar-links">
-                        <li class="nav-li"><a id="active-menu" href="index.html" style="font-family: 'Dancing Script', cursive;">Home</a></li>
-                        <li class="nav-li"><a class="link" href="/about.html" style="font-family: 'Dancing Script', cursive;">About</a></li>
-                        <li class="nav-li"><a class="link" href="index.html#services" style="font-family: 'Dancing Script', cursive;">Services</a></li>
-                        <!-- <li class="nav-li"><a class="link" href="html/portfolio.html">Portfolio</a></li> -->
-                        <li class="nav-li"><a class="link" href="/testimonials.html" style="font-family: 'Dancing Script', cursive;">Testimonials</a></li>
-                        <li class="nav-li"><a class="link" href="/contact.html"style="font-family: 'Dancing Script', cursive;">Contact</a></li>
+                        <li class="nav-li"><a id="active-menu" href="/beautybeats/index.html" style="font-family: 'Dancing Script', cursive;">Home</a></li>
+                        <li class="nav-li"><a class="link" href="/beautybeats/about.html" style="font-family: 'Dancing Script', cursive;">About</a></li>
+                        <li class="nav-li"><a class="link" href="/beautybeats/index.html#services" style="font-family: 'Dancing Script', cursive;">Services</a></li>
+                        <!-- <li class="nav-li"><a class="link" href="/beautybeats/html/portfolio.html">Portfolio</a></li> -->
+                        <li class="nav-li"><a class="link" href="/beautybeats/testimonials.html" style="font-family: 'Dancing Script', cursive;">Testimonials</a></li>
+                        <li class="nav-li"><a class="link" href="/beautybeats/contact.html"style="font-family: 'Dancing Script', cursive;">Contact</a></li>
                     </ul>
                 </div>
                 <button class="dark-mode-button top-dark-mode-button" aria-label="dark mode toggle">
@@ -98,7 +98,7 @@
                        We do any type of makeup and boost our clients confidence !! 
                     </p>
                     <div class="buttons">
-                        <a class="button-solid" href="/about.html" style="font-family: 'Dancing Script', cursive;">
+                        <a class="button-solid" href="/beautybeats//about.html" style="font-family: 'Dancing Script', cursive;">
                             About Us
                         </a>
                         <a class="call-now" href="tel:555-213-9120">
@@ -125,21 +125,21 @@
                 <p style="font-family: 'Dancing Script', cursive;">
                     Discover the timeless elegance of the natural makeup look with our expertly crafted approach that enhances your inherent beauty, subtly and gracefully. We focus on creating a flawless, radiant complexion, gently defining your eyes, and giving your lips and cheeks just a hint of color to bring out your best features without looking overdone. 
                 </p>
-                <a href="/contact.html" class="button-solid"style="font-family: 'Dancing Script', cursive;" >Get in Touch</a>
+                <a href="/beautybeats/contact.html" class="button-solid"style="font-family: 'Dancing Script', cursive;" >Get in Touch</a>
             </div>
             <div class="service">
                 <h2 style="font-family: 'Dancing Script', cursive;">Soft<span>Glam</span></h2>
                 <p style="font-family: 'Dancing Script', cursive;">
                     Soft glam makeup is a beautifully refined style that strikes the perfect balance between a full glam and a natural look. It's all about glowing, smooth skin, subtly enhanced features, and a touch of shimmer to elevate your natural beauty without appearing too dramatic. 
                 </p>
-                <a href="/contact.html" class="button-solid" style="font-family: 'Dancing Script', cursive;">Get in Touch</a>
+                <a href="/beautybeats/contact.html" class="button-solid" style="font-family: 'Dancing Script', cursive;">Get in Touch</a>
             </div>
             <div class="service">
                 <h2 style="font-family: 'Dancing Script', cursive;">Bold<span> Glam</span></h2>
                 <p style="font-family: 'Dancing Script', cursive;">
                     Bold glam makeup is all about making a statement and embracing high-impact looks that draw attention to your best features. This style is characterized by dramatic, vivid colors, strong contouring, and often glitter or metallic elements that catch the eye. It's the perfect choice for evenings, special occasions, or anytime you want to stand out.
                 </p>
-                <a href="/contact.html" class="button-solid" style="font-family: 'Dancing Script', cursive;">Get in Touch</a>
+                <a href="/beautybeats/contact.html" class="button-solid" style="font-family: 'Dancing Script', cursive;">Get in Touch</a>
             </div>
         </section>
 
@@ -158,7 +158,7 @@
     <footer id="footer">
         <div class="container">
             <div class="left-section">
-                <a class="logo" href="/index.html"><img loading="lazy" decoding="async" src="beatslogo.jpg" alt="logo" width="293" height="91"></a>
+                <a class="logo" href="/beautybeats/index.html"><img loading="lazy" decoding="async" src="beatslogo.jpg" alt="logo" width="293" height="91"></a>
                 <p style="font-family: 'Dancing Script', cursive;">
                     At beatsbybelvina_, our mission is to empower our clients through stunning, transformative beauty experiences. Dedicated to artistry and innovation, we specialize in bold and beautiful makeup applications that not only enhance but celebrate individuality. Our commitment to excellence ensures every client leaves feeling confident, radiant, and uniquely glamorous.  
                 </p>
@@ -167,9 +167,9 @@
                 <div class="lists">
                     <ul>
                         <li><h2 style="font-family: 'Dancing Script', cursive;">Company</h2></li>
-                        <li><a href="/index.html" style="font-family: 'Dancing Script', cursive;">Home</a></li>
-                        <li><a href="/about.html" style="font-family: 'Dancing Script', cursive;">About Us</a></li>
-                        <li><a href="/contact.html" style="font-family: 'Dancing Script', cursive;">Services</a></li>
+                        <li><a href="/beautybeats/index.html" style="font-family: 'Dancing Script', cursive;">Home</a></li>
+                        <li><a href="/beautybeats/about.html" style="font-family: 'Dancing Script', cursive;">About Us</a></li>
+                        <li><a href="/beautybeats/contact.html" style="font-family: 'Dancing Script', cursive;">Services</a></li>
                     </ul>
                     <ul>
                         <li><h2 style="font-family: 'Dancing Script', cursive;">Support</h2></li>
@@ -184,7 +184,7 @@
                 </div>
     
                 <div class="buttons">
-                    <a class="button-solid" href="/contact.html" style="font-family: 'Dancing Script', cursive;" >
+                    <a class="button-solid" href="/beautybeats/contact.html" style="font-family: 'Dancing Script', cursive;" >
                         Contact us 
                     </a>
                 </div>
