--- a/testimonials.html
+++ b/testimonials.html
@@ -65,19 +65,19 @@
         <nav>
             <div class="navbar-menu">
                 <div id="side-menu" class=" side-nav">
-                    <a class="nav-logo" href="/index.html">
+                    <a class="nav-logo" href="/beautybeats/index.html">
                         <!--Light mode logo-->
                         <img class="light" aria-hidden="true" decoding="async" src="beatslogo.jpg" alt="compnay logo" height="80">
                         <!--Dark mode logo-->
                         <img class="dark" aria-hidden="true" decoding="async" src="beatslogo.jpg" alt="compnay logo" height="80">
                     </a>
                     <ul id="on-top" class="navbar-links">
-                        <li class="nav-li"><a class="link" href="/index.html" style="font-family: 'Dancing Script', cursive;">Home</a></li>
-                        <li class="nav-li"><a class="link" href="/about.html" style="font-family: 'Dancing Script', cursive;">About</a></li>
-                        <li class="nav-li"><a class="link" href="/index.html#services" style="font-family: 'Dancing Script', cursive;">Services</a></li>
-                        <!-- <li class="nav-li"><a class="link" href="html/portfolio.html">Portfolio</a></li> -->
-                        <li class="nav-li"><a id="active-menu" class="link" href="/testimonials.html" style="font-family: 'Dancing Script', cursive;">Testimonials</a></li>
-                        <li class="nav-li"><a class="link" href="/contact.html" style="font-family: 'Dancing Script', cursive;">Contact</a></li>
+                        <li class="nav-li"><a class="link" href="/beautybeats/index.html" style="font-family: 'Dancing Script', cursive;">Home</a></li>
+                        <li class="nav-li"><a class="link" href="/beautybeats/about.html" style="font-family: 'Dancing Script', cursive;">About</a></li>
+                        <li class="nav-li"><a class="link" href="/beautybeats/index.html#services" style="font-family: 'Dancing Script', cursive;">Services</a></li>
+                        <!-- <li class="nav-li"><a class="link" href="/beautybeats/html/portfolio.html">Portfolio</a></li> -->
+                        <li class="nav-li"><a id="active-menu" class="link" href="/beautybeats/testimonials.html" style="font-family: 'Dancing Script', cursive;">Testimonials</a></li>
+                        <li class="nav-li"><a class="link" href="/beautybeats/contact.html" style="font-family: 'Dancing Script', cursive;">Contact</a></li>
                     </ul>
                 </div>
                 <button class="dark-mode-button top-dark-mode-button" aria-label="dark mode toggle">
@@ -175,9 +175,9 @@
                 <div class="lists">
                     <ul>
                         <li><h2 style="font-family: 'Dancing Script', cursive;">Company</h2></li>
-                        <li><a href="/index.html" style="font-family: 'Dancing Script', cursive;">Home</a></li>
-                        <li><a href="/about.html" style="font-family: 'Dancing Script', cursive;">About Us</a></li>
-                        <li><a href="/contact.html" style="font-family: 'Dancing Script', cursive;">Services</a></li>
+                        <li><a href="/beautybeats/index.html" style="font-family: 'Dancing Script', cursive;">Home</a></li>
+                        <li><a href="/beautybeats/about.html" style="font-family: 'Dancing Script', cursive;">About Us</a></li>
+                        <li><a href="/beautybeats/contact.html" style="font-family: 'Dancing Script', cursive;">Services</a></li>
                     </ul>
                     <ul>
                         <li><h2 style="font-family: 'Dancing Script', cursive;">Support</h2></li>
