--- a/testimonials.html
+++ b/testimonials.html
@@ -176,7 +176,7 @@
                     <ul>
                         <li><h2 style="font-family: 'Dancing Script', cursive;">Company</h2></li>
                         <li><a href="/beautybeats/index.html" style="font-family: 'Dancing Script', cursive;">Home</a></li>
-                        <li><a href="/beautybeats/about.html" style="font-family: 'Dancing Script', cursive;">About Us</a></li>
+                        <li><a href="//beautybeats/about.html" style="font-family: 'Dancing Script', cursive;">About Us</a></li>
                         <li><a href="/beautybeats/contact.html" style="font-family: 'Dancing Script', cursive;">Services</a></li>
                     </ul>
                     <ul>
