--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <img class="dark" decoding="async" src="beatslogo.jpg" alt="" aria-hidden="true" width="21" height="21">
                             <div class="group">
                                 <span class="text" style="font-family: 'Dancing Script', cursive;">Call Now</span>
-                                <span class="number" style="font-family: 'Dancing Script', cursive;">(240-488-0743)</span>
+                                <span class="number" style="font-family: 'Dancing Script', cursive;">(000-000-0000)</span>
                             </div>
                         </a>
                     </div>
@@ -178,8 +178,8 @@
                     <ul>
                         <li><h2 style="font-family: 'Dancing Script', cursive;">Get in Touch</h2></li>
                         <li><img loading="lazy" decoding="async" src="pin.svg" alt="" width="24" height="24"><a href="" target="_blank" style="font-family: 'Dancing Script', cursive;">Gaithersberg,MD</a></li>
-                        <li><img loading="lazy" decoding="async" src="footer-phone.svg" alt="" width="24" height="24"><a href="tel:555-213-9120" style="font-family: 'Dancing Script', cursive;">(555) 213-9120</a></li>
-                        <li><img loading="lazy" decoding="async" src="email.svg" alt="" width="24" height="24"><a href="mailto:info@email.com" style="font-family: 'Dancing Script', cursive;">info@email.com</a></li>
+                        <li><img loading="lazy" decoding="async" src="footer-phone.svg" alt="" width="24" height="24"><a href="tel:000-000-0000" style="font-family: 'Dancing Script', cursive;">000-000-0000</a></li>
+                        <li><img loading="lazy" decoding="async" src="email.svg" alt="" width="24" height="24"><a href="mailto:belvina736@gmail.com" style="font-family: 'Dancing Script', cursive;">belvina736@gmail.com</a></li>
                     </ul>
                 </div>
     
