--- a/contact.html
+++ b/contact.html
@@ -196,7 +196,7 @@
                 </div>
     
                 <div class="buttons">
-                    <a class="button-solid" href="/beautybeats/contact.html" style="font-family: 'Dancing Script', cursive;" >
+                    <a class="button-solid" href="https://beatsbybelvinaa.as.me/schedule.php" style="font-family: 'Dancing Script', cursive;" >
                         Book!!!
                     </a>
                 </div>
